--- a/app/src/main/res/layout/activity_farmer_request_pickup_pick_date.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_pick_date.xml
@@ -25,10 +25,13 @@
     <DatePicker
         android:id="@+id/datePicker"
         android:layout_width="wrap_content"
-        android:layout_height="363dp"
+        android:layout_height="370dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         app:layout_constraintBottom_toTopOf="@+id/pmCheckBox"
-        tools:layout_editor_absoluteX="18dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/FarmerRequestPickupDateNextButton"
