--- a/app/src/main/res/layout/activity_farmer_edit_profile.xml
+++ b/app/src/main/res/layout/activity_farmer_edit_profile.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.wagner.agromovil.FarmerEditProfile">
+    tools:context="com.example.wagner.avocado.FarmerEditProfile">
 
 </android.support.constraint.ConstraintLayout>
