--- a/app/src/main/res/layout/activity_farmer_request_pickup_set_pickup_location_type.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_set_pickup_location_type.xml
@@ -82,9 +82,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:ems="10"
-        android:hint="Please specify what kind of location the address you entered is"
         android:inputType="text"
-        android:text="If other, please specify"
+        android:hint="If other, please specify"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
