--- a/app/src/main/res/layout/activity_farmer_request_pickup_review_order.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_review_order.xml
@@ -86,7 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Nextt"
+        android:text="Next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -105,8 +105,10 @@
         android:id="@+id/button3"
         android:layout_width="352dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="152dp"
+        android:layout_marginStart="4dp"
         android:text="+ Add payment method"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="312dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
