--- a/app/src/main/res/layout/activity_farmer_request_pickup_order_confirmation.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_order_confirmation.xml
@@ -28,7 +28,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/farmerRequestPickupOrderConfirmationFinishButton"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="367dp"
         android:layout_height="wrap_content"
@@ -61,13 +61,14 @@
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="180dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="160.00 COP"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
