--- a/app/src/main/res/layout/activity_farmer_request_pickup_review_order.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_review_order.xml
@@ -51,13 +51,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="88dp"
         android:layout_marginTop="8dp"
         android:text="160.00 COP"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView15" />
+        app:layout_constraintTop_toBottomOf="@+id/textView15"
+        app:layout_constraintVertical_bias="0.481" />
 
     <TextView
         android:id="@+id/textView14"
@@ -86,7 +87,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Nextt"
+        android:text="Next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -105,8 +106,9 @@
         android:id="@+id/button3"
         android:layout_width="352dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="212dp"
         android:text="+ Add payment method"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="312dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="4dp" />
 
 </android.support.constraint.ConstraintLayout>
