--- a/app/src/main/res/layout/activity_farmer_request_pickup_review_order.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_review_order.xml
@@ -107,9 +107,11 @@
         android:layout_width="352dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="176dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="4dp"
         android:text="+ Add payment method"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
