--- a/app/src/main/res/layout/activity_farmer_request_pickup_set_pickup_location_type.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_set_pickup_location_type.xml
@@ -64,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="RadioButton" />
+            android:text="Church" />
 
         <RadioButton
             android:id="@+id/radioButton"
