--- a/app/src/main/res/layout/activity_farmer_view_history_detail.xml
+++ b/app/src/main/res/layout/activity_farmer_view_history_detail.xml
@@ -8,13 +8,13 @@
 
     <TextView
         android:id="@+id/textView23"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Joyce to do (List)"
+        android:text="Joyce to do (should populate from db)"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
